feat: add public transparency page
